Replace the deprecated Thread.getId() with Thread.threadId()